--- a/src/views/styles/Create.css
+++ b/src/views/styles/Create.css
@@ -11,11 +11,11 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 20px; }
 
 .progress__wrapper {
-  width: 80vw; }
+  width: 90vw; }
 
 .progress__steps {
   width: 100%;
@@ -39,19 +39,39 @@
   background-color: #d4d4d4; }
 
 .canvas__save {
-  align-self: flex-end; }
+  position: absolute;
+  bottom: 20px;
+  right: 20px; }
+
+.canvas__controls__shares {
+  background-color: #ebebeb;
+  width: 100%;
+  height: 30%; }
 
 .canvas__wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 80vw;
+  width: 90vw;
+  position: relative; }
+
+.meme__metaData {
+  width: 90vw; }
+
+.canvas__canvas {
+  width: 65%;
+  position: relative; }
+
+.canvas__controls {
+  width: 33%;
+  background-color: #d4d4d4;
+  height: 50vh;
   position: relative; }
 
 .canvas {
   width: 100%;
   background-color: #d4d4d4;
-  height: 60vh;
+  height: 50vh;
   display: block;
   object-fit: cover;
   -webkit-transition: all .5s ease;
