--- a/src/views/styles/Create.scss
+++ b/src/views/styles/Create.scss
@@ -15,12 +15,12 @@
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
-  width: 80vw;
+  width: 90vw;
   margin-bottom: 20px;
 }
 
 .progress__wrapper {
-  width: 80vw;
+  width: 90vw;
 }
 
 .progress__steps {
@@ -48,22 +48,46 @@
   background-color: #d4d4d4;
 }
 
-.canvas__save{
-  align-self: flex-end;
+.canvas__save {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.canvas__controls__shares{
+  background-color: #ebebeb;
+  width: 100%;
+  height: 30%;
 }
 
 .canvas__wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  width: 80vw;
+  width: 90vw;
+  position: relative;
+}
+
+.meme__metaData{
+  width: 90vw;
+}
+
+.canvas__canvas {
+  width: 65%;
+  position: relative;
+}
+
+.canvas__controls {
+  width: 33%;
+  background-color: #d4d4d4;
+  height: 50vh;
   position: relative;
 }
 
 .canvas {
   width: 100%;
   background-color: #d4d4d4;
-  height: 60vh;
+  height: 50vh;
   display: block;
   object-fit: cover;
   -webkit-transition: all .5s ease;
@@ -72,7 +96,7 @@
   transition: all .5s ease;
 }
 
-.canvas__upload--wrapper{
+.canvas__upload--wrapper {
   position: absolute;
   bottom: 20px;
   right: 20px;
