--- a/src/views/styles/Buy.scss
+++ b/src/views/styles/Buy.scss
@@ -12,9 +12,9 @@
 
 .buy__grid {
   display: inline-grid;
-  grid-template-columns: repeat(3, 320px [col-start]);
-  width: 80vw;
-  max-width: 80vw;
+  grid-template-columns: repeat(3, 33.333333333% [col-start]);
+  width: 90vw;
+  max-width: 90vw;
   margin-bottom: 100px;
 }
 
