--- a/src/views/styles/Buy.css
+++ b/src/views/styles/Buy.css
@@ -5,7 +5,7 @@
   height: fit-content;
   width: 100vw;
   flex-direction: column;
-  margin-top: 100px; }
+  min-height: calc(100vh - 50px); }
 
 .buy__grid {
   display: inline-grid;
