--- a/src/views/styles/Create.css
+++ b/src/views/styles/Create.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100vw;
-  flex-direction: column; }
+  flex-direction: column;
+  min-height: calc(100vh - 50px); }
 
 .create__guide {
   display: flex;
@@ -13,6 +13,15 @@
   align-items: flex-start;
   width: 90vw;
   margin-bottom: 20px; }
+
+.gallery__headline {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90vw;
+  margin-bottom: 20px;
+  margin-top: 100px; }
 
 .progress__wrapper {
   width: 90vw; }
@@ -60,7 +69,8 @@
 
 .canvas__canvas {
   width: 65%;
-  position: relative; }
+  position: relative;
+  height: 50vh; }
 
 .canvas__controls {
   width: 33%;
@@ -78,6 +88,21 @@
   -moz-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease; }
+
+.upper-canvas {
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover; }
+
+.lower-canvas {
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover; }
+
+.canvas-container {
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover; }
 
 .canvas__upload--wrapper {
   position: absolute;
