--- a/src/views/styles/Create.scss
+++ b/src/views/styles/Create.scss
@@ -5,9 +5,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100vw;
   flex-direction: column;
+  min-height: calc(100vh - 50px);
 }
 
 .create__guide {
@@ -17,6 +17,16 @@
   align-items: flex-start;
   width: 90vw;
   margin-bottom: 20px;
+}
+
+.gallery__headline {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90vw;
+  margin-bottom: 20px;
+  margin-top: 100px;
 }
 
 .progress__wrapper {
@@ -75,6 +85,7 @@
 .canvas__canvas {
   width: 65%;
   position: relative;
+  height: 50vh;
 }
 
 .canvas__controls {
@@ -94,6 +105,24 @@
   -moz-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
+}
+
+.upper-canvas{
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover;
+}
+
+.lower-canvas{
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover;
+}
+
+.canvas-container{
+  width: 100% !important;
+  height: 50vh !important;
+  object-fit: cover;
 }
 
 .canvas__upload--wrapper {
