--- a/src/views/styles/Create.scss
+++ b/src/views/styles/Create.scss
@@ -64,10 +64,49 @@
   right: 20px;
 }
 
-.canvas__controls__shares{
-  background-color: #ebebeb;
+.canvas__controls__shares {
+  background-color: #51b1ff;
+  width: calc(100% - 60px);
+  height: calc(80% - 80px);
+  // height: 60%;
+  // height: fit-content;
+  padding: 40px 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+.canvas__controls__shares__wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.noPadding {
+  padding: 0 !important;
   width: 100%;
-  height: 30%;
+}
+
+.sketch-picker {
+  border-radius: 0 !important;
+  box-shadow: none !important;
+  background-color: transparent !important;
+}
+
+.canvas__controls__shares__brushSize{
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.sketchPicker{
+  display: flex;
+  justify-content: space-between !important;
+  align-items: center;
+  background-color: #51ffb7;
+  height: 80% !important;
 }
 
 .canvas__wrapper {
@@ -78,8 +117,15 @@
   position: relative;
 }
 
-.meme__metaData{
+.canvas__context {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   width: 90vw;
+  height: 100px;
+  position: relative;
+  margin-top: 20px;
+  background-color: #ebebeb;
 }
 
 .canvas__canvas {
@@ -90,7 +136,8 @@
 
 .canvas__controls {
   width: 33%;
-  background-color: #d4d4d4;
+  background-color: #ebebeb;
+  ;
   height: 50vh;
   position: relative;
 }
@@ -121,19 +168,19 @@
   transition: all .5s ease;
 }
 
-.upper-canvas{
+.upper-canvas {
   width: 100% !important;
   height: 50vh !important;
   object-fit: cover;
 }
 
-.lower-canvas{
+.lower-canvas {
   width: 100% !important;
   height: 50vh !important;
   object-fit: cover;
 }
 
-.canvas-container{
+.canvas-container {
   width: 100% !important;
   height: 50vh !important;
   object-fit: cover;
