ui update and share modal

--- a/src/views/styles/Create.css
+++ b/src/views/styles/Create.css
@@ -67,6 +67,9 @@
   justify-content: space-between;
   align-items: center; }
 
+.loading {
+  background-color: #FFD900 !important; }
+
 .noPadding {
   padding: 0 !important;
   width: 100%; }
