--- a/src/views/styles/Landing.scss
+++ b/src/views/styles/Landing.scss
@@ -54,7 +54,7 @@
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
-  margin-left: 3vw;
+  // margin-left: 3vw;
 }
 
 .landing__button__icon {
