--- a/src/views/styles/Landing.css
+++ b/src/views/styles/Landing.css
@@ -42,8 +42,7 @@
   width: 100vw;
   overflow-x: scroll;
   overflow-y: hidden;
-  white-space: nowrap;
-  margin-left: 3vw; }
+  white-space: nowrap; }
 
 .landing__button__icon {
   height: 25px;
