update colors and logo

--- a/src/components/styles/Nav.scss
+++ b/src/components/styles/Nav.scss
@@ -8,6 +8,7 @@ nav {
   display: flex;
   align-items: center;
   z-index: 3;
+  background-color: #A736FF;
 
   button {
     display: inline-block;
