--- a/src/views/styles/Landing.css
+++ b/src/views/styles/Landing.css
@@ -28,7 +28,7 @@
     margin: 0 0 30px 40px; }
 
 .purple {
-  background-color: #A736FF; }
+  background-color: #36d1ff; }
 
 .landing__hero__copy {
   width: 36vw;
