--- a/src/views/styles/Landing.scss
+++ b/src/views/styles/Landing.scss
@@ -37,7 +37,8 @@
 }
 
 .purple {
-  background-color: #A736FF;
+  // background-color: #A736FF;
+  background-color: #36d1ff;
 }
 
 .landing__hero__copy {
