--- a/src/components/styles/Nav.css
+++ b/src/components/styles/Nav.css
@@ -5,7 +5,8 @@ nav {
   height: 68px;
   display: flex;
   align-items: center;
-  z-index: 3; }
+  z-index: 3;
+  background-color: #A736FF; }
   nav button {
     display: inline-block; }
   nav p {
