--- a/src/views/styles/Create.scss
+++ b/src/views/styles/Create.scss
@@ -201,8 +201,8 @@
 }
 
 .canvas-container {
-  width: 100% !important;
-  height: 50vh !important;
+  // width: 100% !important;
+  // height: 50vh !important;
   object-fit: cover;
 }
 
